# cc_miner

./: MANIFEST.in  README.md  TODO  cc_miner.html  config.yml  index.html  search.js  setup.cfg  tox.ini
.github/workflows/: CI.yml
cc_miner/: socket.html  web.html
cc_miner/core/: socket.html  turtle.html
cc_miner/core/turtle/: types.html
cc_miner/socket/: server.html  types.html
cc_miner/web/: routes.html
cc_miner/web/routes/: main.html  ws.html
docs/: cc_miner.html  search.js
docs/cc_miner/: core.html  helpers.html  public.html  validation.html  web.html
docs/cc_miner/core/: turtle.html
docs/cc_miner/core/turtle/: exceptions.html  types.html
docs/cc_miner/socket/: server.html
docs/cc_miner/validation/: examples.html
docs/cc_miner/web/: app.html  routes.html
lua/: bootloader.lua
src/cc_miner/: __init__.py  __main__.py  base.py  cli.py
src/cc_miner/_helper/: config_loader.py
src/cc_miner/core/: __init__.py
src/cc_miner/core/socket/: __init__.py
src/cc_miner/core/storage/: __init__.py  storage.py
src/cc_miner/core/turtle/: __init__.py  exceptions.py  turtle.py  types.py
src/cc_miner/socket/: __init__.py  server.py  types.py
src/cc_miner/validation/: examples.py  validating_base.py
src/cc_miner/web/: __init__.py  app.py
src/cc_miner/web/routes/: __init__.py  main.py  ws.py
src/cc_miner/web/templates/: index.html
tests/: conftest.py  test_turtle.py
tests/core/: __init__.py  conftest.py  test_turtle.py
tests/helpers/: test_config_loader.py
tests/web/: __init__.py
