[bumpversion]
current_version = 0.1.0
commit = True
tag = True
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)
serialize = 
	{major}.{minor}.{patch}
message = Bump version: {current_version} -> {new_version}
tag_message = Bump version: {current_version} -> {new_version}

[metadata]
name = cc_miner
version = file: src/cc_miner/VERSION
author = alexfayers
description = An epic projected called cc_miner, by alexfayers!
url = https://github.com/alexfayers/cc_miner
long_description = file: README.md
long_description_content_type = "text/markdown"
license = MIT
license_files = LICENSE
platforms = any
classifiers = 
	Programming Language :: Python :: 3.7

[options]
package_dir = 
	= src
install_requires = 
	pyyaml
	typeguard
python_requires = >=3.7
include_package_data = True
zip_safe = no

[options.extras_require]
test = 
	pytest
	tox
lint = 
	pre-commit
devlint = 
	isort
	black
	mypy
	flake8
	pydocstyle
	flake8-docstrings
typehints = 
	types-PyYAML
docs = 
	pdoc
release = 
	bump2version
	gitchangelog

[options.package_data]
cc_miner = py.typed

[options.entry_points]
console_scripts = 
	cc_miner = cc_miner:cli_main

[isort]
profile = black

[black]
line-length = 120
exclude = .*, docs/, __pycache__, setup.py

[flake8]
max-line-length = 120
exclude = .*, docs/, __pycache__, setup.py
docstring-convention = google
ignore = W503

[pydocstyle]
match-dir = (?!tests)(?!docs)[^\.].*
match = (?!test)(?!setup)[^\._].*\.py
inherit = false
convention = google

[mypy]
ignore_missing_imports = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true
strict_equality = true
pretty = true
exclude = (?x)( ^setup\.py$ | ^__pycache__ | ^build )

[bumpversion:file:src/cc_miner/VERSION]

